--- a/index.css
+++ b/index.css
@@ -2,18 +2,25 @@
 *::before,
 *::after {
     box-sizing: border-box;
+    margin: 15px;
+    flex: auto;
 }
 
-html,
+head {
+    text-align: center;
+}
+
 body {
     height: 100%;
-    margin: 0;
-    padding: 0;
-}
-
-body {
+    margin: 35;
+    padding: 15;
     font-family: sans-serif;
     background-color: #f9fbfd;
+}
+
+.dashboard {
+    text-align: center;
+    background: linear-gradient(to left, #0000ff 0%, #99ccff 100%);
 }
 
 header {
@@ -26,14 +33,10 @@ header {
 .btn {
     border: none;
     background-color: rgb(11, 8, 175);
-    border-radius: 25px;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 6px 0px rgba(0, 0, 0, 0.2) 0px 1px 1px
       0px;
+    color: white;
     display: center;
-    font-size: 15px;
-    line-height: 15px;
-    margin: 16px 16px 16px 20px;
-    padding: 14px 34px;
     text-align: center;
     cursor: pointer;
 }
