--- a/index.css
+++ b/index.css
@@ -1,8 +1,9 @@
-*,
-*::before,
-*::after {
+* {
     box-sizing: border-box;
-    margin: 15px;
+    margin: 8px;
+    padding: 1px;
+    font-family: Arial, Helvetica, sans-serif;
+    width: flex;
     flex: auto;
 }
 
@@ -12,8 +13,8 @@ head {
 
 body {
     height: 100%;
-    margin: 35;
-    padding: 15;
+    margin: 5px;
+    padding: 2px;
     font-family: sans-serif;
     background-color: #f9fbfd;
 }
@@ -33,10 +34,7 @@ header {
 .btn {
     border: none;
     background-color: rgb(11, 8, 175);
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 6px 0px rgba(0, 0, 0, 0.2) 0px 1px 1px
-      0px;
     color: white;
-    display: center;
     text-align: center;
     cursor: pointer;
 }
@@ -44,4 +42,22 @@ header {
 button[disabled] {
     cursor: default;
     background: #c0c7cf;
+}
+
+.cities {
+    flex-direction: row;
+    margin: 0px;
+}
+
+.forecast {
+    text-align: center;
+    display: right;
+    width: 300px;
+    padding: 5px;
+    margin: 5px;
+    cursor: pointer;
+}
+
+.forecast ul li {
+    
 }
