--- a/index.css
+++ b/index.css
@@ -3,8 +3,8 @@
     margin: 8px;
     padding: 1px;
     font-family: Arial, Helvetica, sans-serif;
-    width: flex;
     flex: auto;
+    grid-column: auto;
 }
 
 head {
@@ -25,6 +25,9 @@ body {
     background: linear-gradient(to left, #0000ff 0%, #99ccff 100%);
 }
 
+textarea {
+    width: 15%;
+}
 header {
     text-align: center;
     padding: 20px;
@@ -38,28 +41,29 @@ header {
     color: white;
     text-align: center;
     cursor: pointer;
+    width: 15%;
 }
 
 .cities {
     flex-direction: row;
     margin: 0px;
+    float: left;
 }
 
 .cities button{
     background-color: gray;
     cursor: pointer;
+    width: 100%;
 }
 
 .forecast {
     text-align: center;
-    display: right;
-    width: 300px;
+    width: 60%;
     padding: 5px;
     margin: 5px;
-    cursor: pointer;
     float: right;
 }
 
-.forecast ul li {
-    list-style-position: row;
+.forecast ul {
+    position: row
 }
